# hyb8nate

./: .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  Dockerfile  LICENSE  README.md
.github/: DOCKER_SETUP.md  pull_request_template.md
.github/workflows/: clean-docker-hub-after-merge.yaml  dev-branch-image-publisher.yml  docker-publish.yml  tagged-image-publisher.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/: router.py
backend/src/api_keys/: __init__.py  models.py  routes.py  services.py
backend/src/health/: routes.py
backend/src/k8s/: __init__.py  routers.py  services.py
backend/src/schedules/: models.py  routes.py  services.py
backend/src/shared/: audit.py  settings.py
backend/src/shared/auth/: __init__.py  auth_simple.py  routes.py
backend/src/shared/database/: __init__.py  database.py  models.py
backend/src/users/: __init__.py  models.py  routes.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/logos/: README.md
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  ScheduleForm.tsx  ScheduleList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ApiKeysPage.tsx  ChangePasswordPage.tsx  DashboardPage.tsx  LoginPage.tsx  UsersPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
k8s/: all-in-one.yaml
